k8s/python-demo-app/20_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-http-server
  name: python-http-server
  namespace: python-demo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-http-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-http-server
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          imagePullPolicy: IfNotPresent
          name: python-http-server
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
