k8s/python-demo-app/30_service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-http-server
  name: python-http-server
  namespace: python-demo-app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: python-http-server
  type: NodePort
