k8s/python-demo-app/40_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-http-server
  namespace: python-demo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-http-server
                port:
                  number: 8080
